--- a/Individual Project/.project
+++ b/Individual Project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Individual Project</name>
+	<name>Castle Quest</name>
 	<comment></comment>
 	<projects>
 	</projects>
